--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,11 @@
   "name": "todoApp",
   "app_id": "",
   "type": "ionic1",
-  "integrations": {}
+  "integrations": {
+    "cordova": {},
+    "gulp": {}
+  },
+  "watchPatterns": [
+    "scss/**/*"
+  ]
 }
