--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.3"
   },
   "dependencies": {
-    "ngCordova": "^0.1.27-alpha"
+    "ngCordova": "^0.1.27-alpha",
+    "angular-uuid": "^0.1.0"
   }
 }
